fix(regression): chat on mobile was not fully visible in some cases

--- a/src/react/Chat.css
+++ b/src/react/Chat.css
@@ -133,6 +133,7 @@ div.chat-wrapper {
   pointer-events: none;
   overflow: hidden;
   width: 100%;
+  height: 100%;
   scrollbar-width: var(--thin-if-firefox);
 }
 
